# oneDAL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  third-party-programs.txt
.ci/pipeline/: ci.yml
.ci/scripts/: clang-format.sh
cmake/: ConfigGBench.cmake  DownloadProject.cmake  FindDAAL.cmake  FindDAL.cmake  FindDPCPP.cmake  FindTBB.cmake  clang-format.cmake  dpcpp.cmake
cpp/daal/include/data_management/data_source/modifiers/csv/: modifier.h
cpp/daal/include/services/: daal_memory.h
cpp/oneapi/dal/algo/subgraph_isomorphism/: BUILD  Search.code-search  common.cpp  common.hpp  common_kmeans_test.cpp  graph_matching.hpp  graph_matching_types.cpp  graph_matching_types.hpp
cpp/oneapi/dal/algo/subgraph_isomorphism/backend/cpu/: bit_vector.hpp  debug.hpp  graph_matching_kernel.hpp  graph_matching_kernel_lloyd_dense.cpp  graph_matching_kernel_lloyd_dense_test.cpp  graph_matching_kernel_vf3lp_dense.cpp  graph_matching_kernel_vf3lp_dense_test.cpp  matching.hpp  si.hpp  solution.hpp  sorter.hpp  stack.cpp
cpp/oneapi/dal/algo/subgraph_isomorphism/detail/: byte_alloc.hpp  graph_matching_default_kernel.hpp  graph_matching_ops.cpp  graph_matching_ops.hpp  graph_matching_ops_dpc.cpp  matching.cpp  matching.hpp  solution.cpp  solution.hpp
cpp/oneapi/dal/algo/subgraph_isomorphism/test/: badargs.cpp  subgraph_isomorphism_test.cpp
cpp/oneapi/dal/backend/interop/: threading.cpp
cpp/oneapi/dal/detail/: error_messages.cpp  error_messages.hpp  threading.hpp
datasets/: classification.cpp  clustering.cpp  regression.cpp  utils.hpp
dev/make/: common.mk
examples/daal/cpp/source/cholesky/: data_source_el.cpp  data_source_el_fpk.cpp
examples/daal/data/batch/: el10.el
examples/oneapi/cpp/source/subgraph_isomorphism/: subgraph_isomorphism_batch.cpp  subgraph_isomorphism_batch_min.cpp
include/: config.hpp  dataset.hpp  devices.hpp  error_types.hpp  fixture.hpp  metrics.hpp  profiler.hpp  registry.hpp  service.hpp  statistics.hpp
src/: CMakeLists.txt  main.cpp
src/algorithms/covariance/: covariance.cpp  covariance_batch.cpp  covariance_online.cpp  covariance_params.hpp
src/algorithms/decision_forests/classification/: df_classification.cpp  df_classification_params.hpp
src/algorithms/decision_forests/predict/: df_predict.cpp  df_predict_params.hpp
src/algorithms/decision_forests/regression/: df_regression.cpp  df_regression_params.hpp
src/algorithms/gradient_boosted_trees/: gbt_regression.cpp  gbt_regression_batch.cpp
src/algorithms/kmeans/: kmeans.cpp  kmeans_batch.cpp  kmeans_params.hpp
src/algorithms/knn/: bf_knn.cpp  bf_knn_batch.cpp  bf_knn_params.hpp
src/algorithms/linear_regression/: linear_regression.cpp  linear_regression_batch.cpp  linear_regression_online.cpp  linear_regression_params.hpp
src/algorithms/linear_regression/predict/: linear_regression_predict.cpp  linear_regression_predict_params.hpp
src/algorithms/logistic_regression/: logistic_regression_sgd.cpp  logistic_regression_sgd_batch.cpp  logistic_regression_sgd_params.hpp
src/algorithms/logistic_regression/predict/: logistic_regression_predict.cpp  logistic_regression_predict_params.hpp
src/algorithms/low_order_moments/: low_order_moments.cpp  low_order_moments_batch.cpp  low_order_moments_online.cpp  low_order_moments_params.hpp
src/algorithms/pca/: pca.cpp  pca_batch.cpp  pca_params.hpp
src/algorithms/pca/transform/: pca_transform.cpp
src/algorithms/pca_transform/: pca_transform.cpp  pca_transform_params.hpp
src/algorithms/svm/predict/: svm_predict.cpp  svm_predict_params.hpp
src/datasets/: classification.cpp  clustering.cpp  regression.cpp  statistics.cpp
src/pca/: BUILD  pca.cpp
src/utils/: common.hpp  config.cpp  dataset.cpp  datasets.hpp  error_types.cpp  metrics.cpp  profiler.cpp  statistics.cpp
workloads/: load_datasets.py  requirements.txt
workloads/epsilon/: epsilon_loader.py
workloads/hepmass/: hepmass_loader.py
workloads/higgs/: higgs_loader.py
workloads/mnist/: mnist_loader.py
workloads/susy/: susy_loader.py
workloads/year_prediction_msd/: year_prediction_msd_loader.py
